{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 657,
  "lineage": "da095cd7-f490-eab0-aa0b-fda7ffa9500e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "defrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:route-table/rtb-0e29f5c16d96c9dba",
            "default_route_table_id": "rtb-0e29f5c16d96c9dba",
            "id": "rtb-0e29f5c16d96c9dba",
            "owner_id": "221353196223",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095575ce04fba6727",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "komali_msproject-public"
            },
            "tags_all": {
              "Name": "komali_msproject-public"
            },
            "vpc_id": "vpc-0ea711c60c4bc47a1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:internet-gateway/igw-095575ce04fba6727",
            "id": "igw-095575ce04fba6727",
            "owner_id": "221353196223",
            "tags": {
              "Name": "komali_msproject"
            },
            "tags_all": {
              "Name": "komali_msproject"
            },
            "vpc_id": "vpc-0ea711c60c4bc47a1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:route-table/rtb-0380ed99f1df6e81a",
            "id": "rtb-0380ed99f1df6e81a",
            "owner_id": "221353196223",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095575ce04fba6727",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "komali_msproject-MyRoute"
            },
            "tags_all": {
              "Name": "komali_msproject-MyRoute"
            },
            "vpc_id": "vpc-0ea711c60c4bc47a1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:security-group/sg-0e6158b5d07711789",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e6158b5d07711789",
            "ingress": [],
            "name": "komali_msproject-node",
            "name_prefix": "",
            "owner_id": "221353196223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "komali_msproject"
            },
            "tags_all": {
              "Name": "komali_msproject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea711c60c4bc47a1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2553801174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e6158b5d07711789",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3978978140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e6158b5d07711789",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:subnet/subnet-07aeebe24b971303f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.100.100.0/24",
            "id": "subnet-07aeebe24b971303f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221353196223",
            "tags": {
              "Name": "komali_msproject"
            },
            "tags_all": {
              "Name": "komali_msproject"
            },
            "vpc_id": "vpc-0ea711c60c4bc47a1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:subnet/subnet-0c6e6395f6b656596",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.100.200.0/24",
            "id": "subnet-0c6e6395f6b656596",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221353196223",
            "tags": {
              "Name": "komali_msproject"
            },
            "tags_all": {
              "Name": "komali_msproject"
            },
            "vpc_id": "vpc-0ea711c60c4bc47a1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:221353196223:vpc/vpc-0ea711c60c4bc47a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0058ee7b3ca4e6107",
            "default_route_table_id": "rtb-0e29f5c16d96c9dba",
            "default_security_group_id": "sg-0ea444a66ceba323f",
            "dhcp_options_id": "dopt-edc6ef85",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ea711c60c4bc47a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e29f5c16d96c9dba",
            "owner_id": "221353196223",
            "tags": {
              "Name": "komali_msproject"
            },
            "tags_all": {
              "Name": "komali_msproject"
            }
          }
        }
      ]
    }
  ]
}